--- a/.env
+++ b/.env
@@ -9,3 +9,6 @@ DB_SERVER=localhost
 DB_USER=sa
 DB_PASS=123456
 DB_DATABASE_PARADISE=Paradise
+
+# APOLLO ENGINE
+ENGINE_API_KEY=service:paradise-gql:Y9c2uae1fduO8gjIso-keA
