--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "fast-sort": "^1.6.0",
     "graphql": "^14.5.8",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.15",
     "ms": "^2.1.2",
     "mssql": "^5.1.0"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.2",
     "@types/jsonwebtoken": "^8.3.5",
+    "@types/lodash": "^4.14.144",
     "@types/ms": "^0.7.31",
     "@types/mssql": "^4.3.1",
     "@types/node": "^12.12.5",
